--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,7 +33,7 @@
         const [chatInput, setChatInput] = useState("");
         const [connected, setConnected] = useState(false);
 
-        const BACKEND_URL = "https://katakana-shi.onrender.com";
+        const BACKEND_URL = "katakana-shi.onrender.com";
 
         const WS_URL =
           window.location.hostname === "localhost" ||
